# mediapipe-gesture-drawing

./: .gitignore  LICENSE  README.md  landmarker.py  main.py  pyproject.toml  rectangle.py  stroke_filter.py
