[project]
name = "gesturedrawing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "mediapipe>=0.10.32",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=11.3.0",
    "pyrefly>=0.55.0",
    "ruff>=0.15.5",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
